--- a/src/plonetheme/intkwebsite/theme/css/partials/footer.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/footer.less
@@ -2,9 +2,9 @@
 
 .footerLinks() {
     a {
-        color: @theme-text-color;
+        color: @theme-footer-a-color;
         text-decoration: none;
-        line-height: 40px !important;
+        line-height: 25px !important;
 
         &:hover,
         &:focus {
@@ -34,6 +34,10 @@
 	p {
 		font-size: @theme-font-size-p-footer;
 		line-height: @theme-line-height-text;
+	}
+
+	p.address {
+		color: @theme-footer-a-color;
 	}
 
 	h5 {
