--- a/src/plonetheme/intkwebsite/theme/css/partials/header.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/header.less
@@ -44,7 +44,7 @@
         text-align: center;
         font-weight: @theme-font-weight-light;
         font-size: 1.250em;
-        color: @theme-text-color;
+        color: @theme-description-color;
     }
 
     .newsImageContainer {
