--- a/src/plonetheme/intkwebsite/theme/css/partials/layout.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/layout.less
@@ -19,7 +19,7 @@
     p {
         font-size: 1.250em;
         line-height: @theme-line-height-text;
-        color: @theme-text-color;
+        color: @theme-description-color;
         margin: 0 0 @theme-text-margin;
     }
 
@@ -62,7 +62,7 @@
     #content-core ul, ol {
         font-size: @theme-font-size-ul-ol;
         line-height: @theme-line-height-text;
-        color: @theme-text-color;
+        color: @theme-description-color;
         margin-bottom: @theme-text-margin;
     }
 
