--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings__categories.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings__categories.less
@@ -35,13 +35,20 @@ body.template-edit.mosaic-layout-customized {
 		}
 
 		a.round-button {
-			color: #797676 !important;
+			color: #717171 !important;
 			background: #ffffff;
 		}
 
 		a.round-button {
 			border: 1px solid #ededed;
 			border-radius: 25px;
+		}
+
+		a.round-button.active {
+			background: transparent;
+			color: #242424 !important;
+			text-decoration: none !important;
+			border: 1px solid #000000;
 		}
 
 		a.round-button:hover,
