--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -12,6 +12,7 @@
 @theme-body-bg:            				     #ffffff;
 @theme-main-color:           				 #242424;
 @theme-text-color:							 #000000;
+@theme-description-color:					 #717171;
 
 /* TYPOGRAPHY */
 @theme-font-family-base:					 "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -61,6 +62,7 @@
 
 /* Footer */
 @theme-footer-bg:							 #f8f8f8;
+@theme-footer-a-color:						 #717171;
 @theme-gray-lighter:						 #000000;
 @theme-footer-padding:						 40px 0 75px 0;
 @theme-footer-margin-top:					 40px;
@@ -96,7 +98,7 @@
 @theme-listing-title-text-decoration:		 none;
 @theme-listing-title-text-decoration-hover:  underline;
 
-@theme-listing-description-color:			 #797676;
+@theme-listing-description-color:			 #717171;
 @theme-listing-description-font-size:	     1.125em;
 @theme-listing-description-line-height:		 26px;
 @theme-listing-description-margin-top:		 2px;
