--- a/src/plonetheme/intkwebsite/theme/css/plone/buttons.plone.less
+++ b/src/plonetheme/intkwebsite/theme/css/plone/buttons.plone.less
@@ -1,6 +1,6 @@
 //*// BUTTONS //*//
 
-.standalone, .context, .destructive, [type="submit"], button {
+.standalone, .context, .destructive, [type="submit"], button, .btn {
   display: inline-block;
   margin-bottom: 0; // For input.btn
   font-weight: @plone-font-weight-bold;
