--- a/src/plonetheme/intkwebsite/theme/css/partials/header.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/header.less
@@ -53,9 +53,10 @@
         border-radius: 0px;
         box-shadow: none;
 
-        a {
+        div.lead-image-container, a {
             background-color: inherit;
             margin: 0 auto;
+            text-align: center;
 
             img {
                 margin: 0 auto;
