--- a/src/plonetheme/intkwebsite/theme/css/partials/layout.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/layout.less
@@ -17,6 +17,7 @@
 
     /* Body text */
     p {
+        .Lato();
         font-size: 1.250em;
         line-height: @theme-line-height-text;
         color: @theme-description-color;
