--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings__categories.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings__categories.less
@@ -35,7 +35,7 @@ body.template-edit.mosaic-layout-customized {
 		}
 
 		a.round-button {
-			color: #717171 !important;
+			color: @theme-description-color !important;
 			background: #ffffff;
 		}
 
