--- a/src/plonetheme/intkwebsite/theme/css/partials/pagination.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/pagination.less
@@ -17,7 +17,7 @@ body.frontend {
 		li > a, .pagination li > span {
 			background-color: transparent;
 			border: 1px solid transparent !important;
-			color: #717171 !important;
+			color: @theme-description-color !important;
 		}
 
 
