--- a/src/plonetheme/intkwebsite/theme/css/partials/listings.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/listings.less
@@ -76,7 +76,7 @@
 			margin-left: -1px;
 			background-color: rgba(255,255,255, 0.96);
 			border-color: #eeeeee;
-			color: #717171;
+			color: @theme-description-color;
 			outline: none;
 			font-size: 1.100em;
 		}
@@ -121,8 +121,6 @@
 			margin-bottom: @theme-listing-description-margin-bottom;
 		}
 	}
-
-	
 
 	.visible-xs, .visible-sm, .visible-md, .visible-lg {
 	    display: none !important;
@@ -179,6 +177,274 @@
 	}
 }
 
+
+.testimonials() {
+
+	&:before {
+		display: none !important;
+	}
+
+	display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    -webkit-align-items: flex-start;
+    -webkit-box-align: flex-start;
+    -ms-flex-align: flex-start;
+    align-items: flex-start;
+    grid-row-gap: 20px;
+    max-width: 1200px;
+
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
+
+    margin-bottom: 60px;
+
+    @media(max-width: 767px) {
+    	display: grid;
+	    grid-template-columns: 1fr;
+	    grid-auto-flow: row;
+	    align-items: flex-start;
+	    max-width: 1200px;
+	    grid-row-gap: 20px;
+	    
+    }
+
+    @media(max-width: 991px) {
+    	padding-left: 15px;
+	    padding-right: 15px;
+    }
+
+
+	.entry-item {
+
+		border-radius: 10px;
+	    -webkit-transition-property: box-shadow,border-color,background-color;
+	    transition-property: box-shadow,border-color,background-color;
+	    -webkit-transition-timing-function: ease-in-out;
+	    transition-timing-function: ease-in-out;
+	    -webkit-transition-duration: 300ms;
+	    transition-duration: 300ms;
+	    -webkit-align-items: stretch;
+	    -webkit-box-align: stretch;
+	    -ms-flex-align: stretch;
+	    align-items: stretch;
+	    -webkit-flex: 1;
+	    -ms-flex: 1;
+	    flex: 1;
+	    max-width: 100%;
+
+	    box-shadow: none;
+
+	    border: 1px solid #E6E6E6;
+
+	    background-color: #ffffff;
+
+	    .entry {
+
+			margin-bottom: 0px !important;
+
+			display: grid;
+		    grid-template-columns: 1fr;
+		    grid-template-rows: auto auto;
+		    height: 300px;
+		    width: 100%;
+		    padding: 20px 15px 30px 15px;
+		    border-radius: 10px;
+
+		    box-sizing: border-box;
+
+			grid-template-columns: auto auto;
+		    grid-template-rows: 1fr;
+		    height: auto;
+		    min-height: 190px;
+		    padding: 40px 40px 40px 30px;
+
+		    @media(max-width: 991px) {
+		    	display: grid;
+			    grid-template-columns: 1fr;
+			    grid-template-rows: auto auto;
+			    height: 300px;
+			    width: 100%;
+			    padding: 20px 15px 30px;
+			    border-radius: 10px;
+		    }
+
+		    .image-container {
+
+		    	display: -webkit-box;
+			    display: -webkit-flex;
+			    display: -ms-flexbox;
+			    display: flex;
+			    -webkit-flex-direction: column;
+			    -ms-flex-direction: column;
+			    flex-direction: column;
+			    -webkit-box-pack: center;
+			    -webkit-justify-content: center;
+			    -ms-flex-pack: center;
+			    justify-content: center;
+			    -webkit-align-items: center;
+			    -webkit-box-align: center;
+			    -ms-flex-align: center;
+			    align-items: center;
+    			padding: 0px 0px 20px 0px;
+
+		    	grid-template-columns: auto auto;
+			    grid-template-rows: 1fr;
+			    height: 100%;
+			    padding: 0px 20px 0px 0px;
+
+			    .image-wrapper {
+			    	display: block;
+					width: 100px;
+				    height: 100px;
+				    position: relative;
+				    overflow: hidden;
+				    border-radius: 50%;
+				}
+
+				@media(max-width: 991px) {
+					display: flex;
+				    flex-direction: column;
+				    -webkit-box-pack: center;
+				    justify-content: center;
+				    -webkit-box-align: center;
+				    align-items: center;
+				    padding: 0px 0px 20px;
+				}
+			}
+
+			.title-description-wrapper {
+				display: -webkit-box;
+			    display: -webkit-flex;
+			    display: -ms-flexbox;
+			    display: flex;
+			    -webkit-flex-direction: column;
+			    -ms-flex-direction: column;
+			    flex-direction: column;
+			    -webkit-box-pack: justify;
+			    -webkit-justify-content: space-between;
+			    -ms-flex-pack: justify;
+			    justify-content: space-between;
+
+			    .description-wrapper p {
+			    	font-size: 16px;
+			    	color: #666666;
+			    }
+
+			    .title-wrapper {
+			    	margin-top: 0px;
+			    }
+
+			    .title-wrapper a, .title-wrapper span.item-title {
+			    	text-transform: uppercase;
+			    	font-size: 12px;
+			    	font-weight: 700;
+			    	color: #666666;
+			    	.Montserrat();
+			    }
+			}
+		}
+	}
+}
+
+.portletCollection {
+	.entries();
+	
+	background-color: #ffffff !important;
+	
+	div.entries {
+		margin-top: 50px;
+	}
+
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+
+	.portletHeader {
+		background-color: transparent;
+		
+		font-size: 16px;
+		padding: 0px;
+		padding-top: 50px;
+
+		h2 {
+			.Montserrat();
+			font-weight: 700;
+			font-size: 1.250em;
+			line-height: 35px;
+			margin-bottom: 0px;
+			padding-left: 15px;
+			padding-right: 15px;
+			color: #242424;
+		    letter-spacing: 0.05em;
+		    text-transform: uppercase;
+		}
+
+		div.portlet-description {
+			.Lato();
+			font-weight: @theme-font-weight-light;
+			font-size: 1.250em;
+			color: @theme-description-color;
+			padding-left: 15px;
+			padding-right: 15px;
+		}
+
+		@media(min-width: 992px) {
+			text-align: center;
+		}
+	}
+
+	.portletFooter {
+		border-top: 0px;
+		background: transparent;
+		box-shadow: none;
+		padding-top: 40px;
+		padding-bottom: 65px;
+		text-align: center;
+
+		.buttons();
+
+		@media(min-width: 992px) {
+			padding-top: 40px;
+			
+		}
+	}
+
+
+	div.entries.testimonials {
+		.testimonials();
+	}
+}
+
+#portal-footer-wrapper .portletCollection {
+	margin-top: -40px;
+	margin-left: -25px;
+    margin-right: -25px;
+    padding-left: 25px;
+    padding-right: 25px;
+
+
+	@media (min-width: 769px) {
+		margin-left: -40px;
+	    margin-right: -40px;
+	    padding-left: 40px;
+	    padding-right: 40px;
+	}
+
+	@media(min-width: 1200px) {
+		margin-left: -115px;
+	    margin-right: -115px;
+	    padding-left: 100px;
+	    padding-right: 100px;
+	}
+}
+
+body:not(.frontend) #portal-footer-wrapper .portletCollection {
+	display: none !important;
+}
+
+
 body.frontend {
 	&.portaltype-folder,
 	&.portaltype-collection {
@@ -186,10 +452,51 @@ body.frontend {
 		.listing_structure();
 
 		#content-core .entries {
-			.entries()
+			.entries();
+		}
+	}
+
+	.portletCollection {
+		.entries();
+		.entries {
+			float: left;
+		}
+
+		.entries .entry {
+			float: left;
+		}
+
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+	}
+
+	#portal-footer-wrapper .portletCollection {
+		margin-top: -40px;
+		margin-left: -25px;
+	    margin-right: -25px;
+	    padding-left: 25px;
+	    padding-right: 25px;
+
+
+		@media (min-width: 769px) {
+			margin-left: -40px;
+		    margin-right: -40px;
+		    padding-left: 40px;
+		    padding-right: 40px;
+		}
+
+		@media(min-width: 1200px) {
+			margin-left: -115px;
+		    margin-right: -115px;
+		    padding-left: 100px;
+		    padding-right: 100px;
 		}
 	}
 }
+
+
 
 
 
