--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -11,14 +11,14 @@
 /* SCAFFOLDING */
 @theme-body-bg:            				     #ffffff;
 @theme-main-color:           				 #242424;
-@theme-text-color:							 #000000;
-@theme-description-color:					 #717171;
+@theme-text-color:							 #242424;
+@theme-description-color:					 #999999; /* #717171 for ideal color contrast */
 
 /* TYPOGRAPHY */
 @theme-font-family-base:					 "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @theme-font-size-base:						 16px;
 @theme-font-weight-light: 					 300;
-@theme-font-weight-regular: 				 400;
+@theme-font-weight-regular: 				 300;
 @theme-font-weight-bold: 				 	 700;
 @theme-line-height-base:					 1.428571429;
 @theme-line-height-text:					 1.65;
@@ -42,9 +42,9 @@
 @theme-font-size-ul-ol:						 20px;
 
 @theme-link-color:							 #242424;
-@theme-link-hover-color:					 #000000;
-@theme-link-color-footer:					 #000000;
-@theme-link-hover-color-footer:				 #000000;
+@theme-link-hover-color:					 #242424;
+@theme-link-color-footer:					 #242424;
+@theme-link-hover-color-footer:				 #242424;
 
 
 /* Tables */	
@@ -62,16 +62,16 @@
 
 /* Footer */
 @theme-footer-bg:							 #f8f8f8;
-@theme-footer-a-color:						 #717171;
-@theme-gray-lighter:						 #000000;
-@theme-footer-padding:						 40px 0 75px 0;
+@theme-footer-a-color:						 #999999;
+@theme-gray-lighter:						 #242424;
+@theme-footer-padding:						 40px 0 100px 0;
 @theme-footer-margin-top:					 40px;
 @theme-footer-margin-left-lg:				 100px;
 @theme-footer-margin-right-lg:				 100px;
 @theme-footer-margin-left-sm:				 25px;
 @theme-footer-margin-right-sm:				 25px;
 @theme-font-size-h5-footer:            	     0.875em;
-@theme-font-size-h5-footer-color:            #000000;
+@theme-font-size-h5-footer-color:            #666666;
 @theme-font-size-p-footer:					 1.125em;
 @theme-footer-section-margin-top:			 20px;
 @theme-footer-max-width:					 640px;
@@ -98,7 +98,7 @@
 @theme-listing-title-text-decoration:		 none;
 @theme-listing-title-text-decoration-hover:  underline;
 
-@theme-listing-description-color:			 #717171;
+@theme-listing-description-color:			 #999999; /* #717171 for ideal color contrast */
 @theme-listing-description-font-size:	     1.125em;
 @theme-listing-description-line-height:		 26px;
 @theme-listing-description-margin-top:		 2px;
