Make language selector a dropdown menu

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -79,6 +79,8 @@
 @import "partials/header.less";
 @import "partials/navbar.less";
 @import "partials/navbar__items.less";
+@import "partials/collapse.less";
+@import "partials/collapse__items.less";
 @import "partials/footer.less";
 @import "partials/mosaic__structure.less";
 
