--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
@@ -15,7 +15,9 @@ body.template-edit.mosaic-layout-customized {
 		.entries();
 	}
 
-	&.section-organizations {
+	&.section-organizations,
+	&.section-organizaciones,
+	&.section-organizzazioni {
 		div.entries {
 			margin-top: 10px;
 		}
