--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__structure.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__structure.less
@@ -22,7 +22,7 @@ body.template-edit.mosaic-layout-customized {
 		margin-top: 0px;
 	}
 
-	&:not(.section-organizations):not(.section-organisaties):not(.section-vacancies):not(.section-werken-bij) {
+	&:not(.section-organizations):not(.section-organisaties):not(.section-vacancies):not(.section-werken-bij):not(.section-organizzazioni):not(.section-organizaciones) {
 
 		#header-wrapper {
 			.documentFirstHeading {
