--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -78,7 +78,7 @@
 
 /* Menu */
 @theme-menu-a-color:						 #ffffff;
-@theme-menu-a-font-size:					 1.125em;
+@theme-menu-a-font-size:					 14px;
 @theme-menu-a-color-not-currentlanguage:	 #7f7f7f;
 
 
