--- a/src/plonetheme/intkwebsite/theme/css/plone/sitenav.plone.less
+++ b/src/plonetheme/intkwebsite/theme/css/plone/sitenav.plone.less
@@ -190,7 +190,7 @@
   position: relative;
   min-height: @plone-sitenav-height; // Ensure a navbar always shows (e.g., without a .navbar-brand in collapsed mode)
   margin-bottom: @plone-sitenav-margin-bottom;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, .17);
+  box-shadow: none;
 
   // Prevent floats from breaking the navbar
   &:extend(.clearfix all);
