Fix last section of mosaic layout: same distance to the footer as all other sections.

--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
@@ -24,6 +24,10 @@ body.template-edit.mosaic-layout-customized {
 	}
 }
 
+body.section-frontpage #main-container footer.row {
+	display: none;
+}
+
 
 
 
