--- a/src/plonetheme/intkwebsite/theme/css/partials/listings.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/listings.less
@@ -22,11 +22,15 @@
 	    text-align: center;
 
 	    svg {
+	    	position: absolute;
+	    	top: 50%;
+	    	left: 50%;
 	    	width: 70px;
 	    	height: 70px;
-	    	margin-top: 50%;
-    		transform: translateY(-50%);
+	    	margin-top: 0;
+    		transform: translateY(-50%) translateX(-50%);
     		opacity: 0.75;
+
 	    }
 	}
 
