--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
@@ -28,6 +28,10 @@ body.section-frontpage #main-container footer.row {
 	display: none;
 }
 
+body.section-frontpage #main-container div.mosaic-grid-cell.mosaic-width-full.mosaic-position-leftmost > div:nth-child(3) {
+	display: none;
+}
+
 
 
 
