Make slick carousel into

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -96,6 +96,9 @@
 @import "partials/mosaic__listings.less";
 @import "partials/mosaic__listings__categories.less";
 
+/* THEME: Slick carouseel */
+@import "partials/slickcarousel.less";
+
 /* THEME: search */
 @import "partials/search.less";
 @import "partials/search__items.less";
