--- a/src/plonetheme/intkwebsite/theme/css/partials/footer.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/footer.less
@@ -39,26 +39,32 @@
 		padding-top: 0px;
 		
 		p {
-			font-size: @theme-font-size-p-footer;
+			font-size: 1.000em;
 			line-height: @theme-line-height-text;
 		}
 
 		p.address {
-			color: @theme-description-color;
+			color: @theme-footer-p-color;
 		}
 
-		h5 {
+		p.right-footer-title {
 			.Montserrat();
 			font-size: @theme-font-size-h5-footer;
 			color: @theme-font-size-h5-footer-color;
 			font-weight: @theme-font-weight-bold;
 			text-transform: uppercase;
+			margin-bottom: 10px;
+			margin-top: 10px;
+			line-height: 1.1;
 		}
 
-		h4 {
+		p.left-footer-title {
 			font-size: @theme-font-size-p-footer;
-			color: @theme-main-color;
-			font-weight: @theme-font-weight-light;
+			color: @theme-footer-p-color;
+			font-weight: @theme-font-weight-bold;
+			margin-bottom: 10px;
+			margin-top: 10px;
+			line-height: 1.1;
 		}
 	}
 
