--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__structure.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__structure.less
@@ -214,7 +214,8 @@ body.template-edit.mosaic-layout-customized {
 		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(3),
 		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(5),
 		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(7),
-		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(9) {
+		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(9),
+		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(11) {
 			text-align: center;
 			width: 100%;
 
@@ -227,7 +228,9 @@ body.template-edit.mosaic-layout-customized {
 		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(2),
 		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(3),
 		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(6),
-		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(7) {
+		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(7),
+		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(10),
+		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(11) {
 			background: #ffffff;
 		}
 
@@ -246,7 +249,8 @@ body.template-edit.mosaic-layout-customized {
 		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(3):not(.mosaic-IDublinCore-description-tile):not(.mosaic-IDublinCore-title-tile),
 		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(5):not(.mosaic-IDublinCore-description-tile):not(.mosaic-IDublinCore-title-tile),
 		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(7):not(.mosaic-IDublinCore-description-tile):not(.mosaic-IDublinCore-title-tile),
-		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(9):not(.mosaic-IDublinCore-description-tile):not(.mosaic-IDublinCore-title-tile) { 
+		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(9):not(.mosaic-IDublinCore-description-tile):not(.mosaic-IDublinCore-title-tile),
+		.mosaic-grid-row .mosaic-width-full > div.movable:nth-child(11):not(.mosaic-IDublinCore-description-tile):not(.mosaic-IDublinCore-title-tile) { 
 			padding-top: 0px;
 
 			a.btn {
