--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -44,7 +44,7 @@
 @theme-link-color:							 #242424;
 @theme-link-hover-color:					 #242424;
 @theme-link-color-footer:					 #242424;
-@theme-link-hover-color-footer:				 #242424;
+@theme-link-hover-color-footer:				 #ffffff;
 
 
 /* Tables */	
@@ -61,8 +61,9 @@
 @theme-bg-header:							 #f8f8f8;
 
 /* Footer */
-@theme-footer-bg:							 #f8f8f8;
-@theme-footer-a-color:						 #999999;
+@theme-footer-bg:							 #242424;
+@theme-footer-a-color:						 #ffffff;
+@theme-footer-p-color:						 #ffffff;
 @theme-gray-lighter:						 #242424;
 @theme-footer-padding:						 40px 0 100px 0;
 @theme-footer-margin-top:					 40px;
@@ -71,7 +72,7 @@
 @theme-footer-margin-left-sm:				 25px;
 @theme-footer-margin-right-sm:				 25px;
 @theme-font-size-h5-footer:            	     0.875em;
-@theme-font-size-h5-footer-color:            #666666;
+@theme-font-size-h5-footer-color:            #ffffff;
 @theme-font-size-p-footer:					 1.125em;
 @theme-footer-section-margin-top:			 20px;
 @theme-footer-max-width:					 640px;
