--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
@@ -30,10 +30,10 @@ body.section-frontpage #main-container footer.row {
 	display: none;
 }
 
-body.section-frontpage #main-container div.mosaic-grid-cell.mosaic-width-full.mosaic-position-leftmost > div:nth-child(3),
+/*body.section-frontpage #main-container div.mosaic-grid-cell.mosaic-width-full.mosaic-position-leftmost > div:nth-child(3),
 body.section-frontpage #main-container div.mosaic-grid-cell.mosaic-width-full.mosaic-position-leftmost > div:nth-child(7) {
 	display: none;
-}
+}*/
 
 body.section-frontpage #main-container div.mosaic-grid-cell.mosaic-width-full.mosaic-position-leftmost > div:nth-child(6) {
 	float: none;
