Add styles for fullscreen slide

--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__structure.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__structure.less
@@ -27,7 +27,7 @@ body.template-edit.mosaic-layout-customized {
 		margin-top: 0px;
 	}
 
-	&:not(.section-organizations):not(.section-organisaties):not(.section-vacancies):not(.section-werken-bij):not(.section-organizzazioni):not(.section-organizaciones) {
+	&:not(.section-organizations):not(.section-organisaties):not(.section-intk):not(.section-organisaties):not(.section-vacancies):not(.section-werken-bij):not(.section-organizzazioni):not(.section-organizaciones) {
 
 		#header-wrapper {
 			.documentFirstHeading {
@@ -345,7 +345,12 @@ body.template-edit.mosaic-layout-customized {
 	}
 }
 
-
+@media(min-width: 992px) {
+    body.portaltype-document.template-layout #main-container {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
 
 
 
