--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -107,4 +107,6 @@
 @import "partials/popover.less";
 @import "partials/person.less";
 
-
+/* THEME: Storytelling */
+@import "partials/storytelling.less";
+@import "partials/storytelling__fullscreen.less";
