--- a/src/plonetheme/intkwebsite/theme/css/partials/header.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/header.less
@@ -47,13 +47,14 @@
         color: @theme-description-color;
     }
 
-    .newsImageContainer {
+    .newsImageContainer, .mosaic-ILeadImageBehavior-image-tile > .mosaic-tile-content {
         float: none;
         margin: 0 auto;
         border-radius: 0px;
         box-shadow: none;
+        overflow: hidden;
 
-        div.lead-image-container, a {
+        div.lead-image-container, .mosaic-ILeadImageBehavior-image-tile > .mosaic-tile-content > span.namedblobimage-field, a {
             background-color: inherit;
             margin: 0 auto;
             text-align: center;
@@ -66,7 +67,7 @@
         }
     }
 
-    .leadImage {
+    .leadImage, .mosaic-ILeadImageBehavior-image-tile {
         margin-top: 50px;
         margin-bottom: 20px;
     }
@@ -128,7 +129,7 @@
 
     /* Mobile */
     @media (max-width: 768px) {
-        .leadImage {
+        .leadImage, .mosaic-ILeadImageBehavior-image-tile {
             margin-top: 0px
         }
 
@@ -138,7 +139,7 @@
     }
 
     @media (max-width: 991px) {
-        .leadImage {
+        .leadImage, .mosaic-ILeadImageBehavior-image-tile {
             margin-top: 0px
         }
 
@@ -152,7 +153,7 @@
 
         .documentDescription {
             text-align: left;
-        } 
+        }
 
         #content-core {
             width: 100%;
@@ -173,7 +174,7 @@
 
         #top-header-wrapper {
             padding-bottom: 35px;
-        }       
+        }
 
         #viewlet-below-content-title .documentByLine {
             text-align: left;
@@ -186,7 +187,7 @@
 
     /* Desktop */
     @media(min-width: 1200px) {
-        .leadImage {
+        .leadImage, .mosaic-ILeadImageBehavior-image-tile {
             max-width: 960px;
             margin-left: auto;
             margin-right: auto;
@@ -195,7 +196,7 @@
 
     /* Desktop xlarge */
     @media(min-width: 1440px) {
-        .leadImage {
+        .leadImage, .mosaic-ILeadImageBehavior-image-tile {
             max-width: 1280px;
             margin-left: auto;
             margin-right: auto;
