--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -110,3 +110,4 @@
 /* THEME: Storytelling */
 @import "partials/storytelling.less";
 @import "partials/storytelling__fullscreen.less";
+@import "partials/storytelling__textslide.less";
