--- a/src/plonetheme/intkwebsite/theme/css/partials/header.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/header.less
@@ -53,6 +53,7 @@
         border-radius: 0px;
         box-shadow: none;
         overflow: hidden;
+        text-align: center;
 
         div.lead-image-container, .mosaic-ILeadImageBehavior-image-tile > .mosaic-tile-content > span.namedblobimage-field, a {
             background-color: inherit;
