--- a/src/plonetheme/intkwebsite/theme/css/partials/storytelling__fullscreen.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/storytelling__fullscreen.less
@@ -50,5 +50,21 @@ body.template-edit.mosaic-layout-customized div.outer-wrapper .fullscreen-text-b
     p {
         color: #ffffff;
     }
+
+
+}
+
+body.template-edit.mosaic-layout-customized div.outer-wrapper .fullscreen-slide-wrapper .fullscreen-sticky-image {
+    background-attachment: scroll !important;
+}
+
+body.template-edit.mosaic-layout-customized div.outer-wrapper .fullscreen-slide.row {
+    margin-left: 0px;
+    margin-right: 0px;
+
+
+    .fullscreen-slide-wrapper {
+        padding: 10px;
+    }
 }
 
