--- a/src/plonetheme/intkwebsite/theme/css/partials/structure.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/structure.less
@@ -25,6 +25,7 @@ div.website-wrapper {
   background: #ffffff;
   height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   /* Force Hardware Acceleration in WebKit */
   -webkit-transition: -webkit-transform 0.4s;
