--- a/src/plonetheme/intkwebsite/theme/css/partials/storytelling.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/storytelling.less
@@ -1,4 +1,12 @@
-@media(min-width: 1200px) {
+
+.side-text-slide.row {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+@media(min-width: 992px) {
     .side-text-slide {
         height: 100%;
 
@@ -35,13 +43,37 @@
             height: 100%;
             padding-left: 10%;
             padding-right: 10%;
-            padding-top: 10%;
+            padding-top: 5%;
             padding-bottom: 10%;
+        }
+
+        p {
+            @media(min-width: 992px) {
+                font-size: 1.5em !important;
+                line-height: 1.5 !important;
+            }
         }
 
         .body-table-cell {
             display: table-cell;
             vertical-align: middle;
+        }
+
+        .side-text-title {
+            font-size: 1.5em !important;
+            margin-bottom: 1.5em !important;
+        }
+    }
+
+    &.align-Left {
+        img {
+            transform: translateX(-100px);
+        }
+    }
+
+    &.align-Right {
+        img {
+            transform: translateX(100px);
         }
     }
 }
